fix: headline on mobile

--- a/apps/demo/src/app/home/home.component.scss
+++ b/apps/demo/src/app/home/home.component.scss
@@ -9,9 +9,12 @@
   left: 0;
   right: 0;
 
-  .app-list,
-  code {
+  .app-list {
     padding: 0 32px;
+  }
+
+  code {
+    padding: 0 16px;
   }
 
   .app-card {
